kustomize/bases/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-dashboard
spec:
  type: ClusterIP
  ports:
  - name: traefik
    port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    # These are defaults for K3S install
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
